fixed headshot display  on mobile

--- a/css/teams.css
+++ b/css/teams.css
@@ -74,6 +74,7 @@ a.nav-slogan {
 .player img {
     width: 100%;
     height: 200px;
+    min-height: 175px;
 }
 
 .player p {
@@ -131,21 +132,11 @@ margin-top: 20px;
 }
 
 
-
-@media only screen and (max-width: 450px) {
-    .about {
-        width: 75%;
-        margin-top: 15px;
-    }
-    .about p {
-        font-size: 18px;
-        line-height: 32px;
-    }
-}
-
 @media (max-width: 650px) {
   .grid-container  {
     grid-template-areas: 
+        'player'
+        'player'
         'player'
         'player'
         'player'
